Added Shortcut buttons, add config

--- a/src/main/resources/assets/originatia/lang/en_us.json
+++ b/src/main/resources/assets/originatia/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-
+    "originatia.configgui.enable_or_dropdown_shortcut": "Enable OriginRealms Dropdown Shortcut",
+    "originatia.configgui.enable_fix_block_sounds": "Enable Fix Block Sounds",
+    "originatia.configgui.safe_remove_planter_box": "Safe Remove Planter Box"
 }
