--- a/src/main/resources/assets/originatia/lang/en_us.json
+++ b/src/main/resources/assets/originatia/lang/en_us.json
@@ -3,6 +3,15 @@
     "originatia.configgui.enable_fix_block_sounds": "Enable Fix Block Sounds",
     "originatia.configgui.safe_remove_planter_box": "Safe Remove Planter Box",
 
+    "warp_mode.your_realms": "Your Realms",
+    "warp_mode.spawn": "Spawn",
+    "warp_mode.red_balloon": "Red Balloon",
+    "warp_mode.green_balloon": "Green Balloon",
+    "warp_mode.blue_balloon": "Blue Balloon",
+    "warp_mode.yellow_balloon": "Yellow Balloon",
+    "warp_mode.navigator": "Navigator...",
+    "warp_mode.press_key": "[ %s ]",
+
     "key.categories.originatia": "Originatia",
     "key.quick_navigator.desc": "Quick Navigator"
 }
