Clean up some features

--- a/src/main/resources/assets/originatia/lang/en_us.json
+++ b/src/main/resources/assets/originatia/lang/en_us.json
@@ -1,6 +1,6 @@
 {
-    "originatia.configgui.enable_or_dropdown_shortcut": "Enable OriginRealms Dropdown Shortcut",
     "originatia.configgui.enable_fix_block_sounds": "Enable Fix Block Sounds",
+    "originatia.configgui.enable_custom_block_shape": "Enable Custom Block Shape",
 
     "warp_mode.your_realms": "Your Realms",
     "warp_mode.spawn": "Spawn",
